--- a/views/carrito.html
+++ b/views/carrito.html
@@ -171,11 +171,14 @@
                 <h4 class="total-title">Total:</h4>
                 <h4 class="total-value">$455,99</h4>
             </div>
+            <div class="finalizar-compra">
+                <button type="submit">Finalizar Compra</button>
+            </div>
         </section>
 
-        <div>
-            <button type="submit">Finalizar Compra</button>
-        </div>
+
+
+
 
     </main>
     <!-- Footer -->
