update cart sticky

--- a/views/carrito.html
+++ b/views/carrito.html
@@ -171,6 +171,7 @@
                 <h4 class="total-title">Total:</h4>
                 <h4 class="total-value">$455,99</h4>
             </div>
+            <span><a href="#"></a></span>
             <div class="finalizar-compra">
                 <button type="submit">Finalizar Compra</button>
             </div>
