--- a/views/carrito.html
+++ b/views/carrito.html
@@ -37,7 +37,29 @@
             <div class="line"></div>
             <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
         </section>
+
+        <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+        <label for="openSidebarMenu" class="sidebarIconToggle">
+          <div class="spinner diagonal part-1"></div>
+          <div class="spinner horizontal"></div>
+          <div class="spinner diagonal part-2"></div>
+        </label>
+        <div id="sidebarMenu">
+          <ul class="sidebarMenuInner">
+            <li><a href="#" target="_blank">Mi Cuenta</a></li>
+            <li><a href="#" target="_blank">Nosotros</a></li>
+            <li><a href="#" target="_blank">Contacto</a></li>
+            <li><a href="#" target="_blank">FAQ</a></li>
+            <li><a href="#" target="_blank">Terminos y Condiciones</a></li>
+            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+          </ul>
+        </div>
+
     </header>
+
+
     <!-- Main: Secciones Resumen Cart - Codigo Descuento y Total -->
     <main>
         <section class="resumen-cart-productos">
