--- a/views/carrito.html
+++ b/views/carrito.html
@@ -67,7 +67,7 @@
                 <div class="info-producto">
                     <div class="slider-producto"><img src="./img/guarderia_2.jpg" alt="Guarderia"></div>
                     <div class="detalle-producto">
-                        <h4 class="titulo-producto">Guarderia 1</h4>
+                        <h4 class="titulo-producto">Guardería Catis</h4>
                         <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur,
                             adipisicing elit. Numquam vitae optio consequuntur nisi qui adipisci iure quis,
                             sequi quam voluptas dolorum quos, animi officiis sed.</p>
@@ -115,7 +115,7 @@
                 <div class="info-producto">
                     <div class="slider-producto"><img src="./img/guarderia_canina_1.jpg" alt="Guarderia"></div>
                     <div class="detalle-producto">
-                        <h4 class="titulo-producto">Guarderia 2</h4>
+                        <h4 class="titulo-producto">Guardería Wag Wag</h4>
                         <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur,
                             adipisicing elit. Numquam vitae optio consequuntur nisi qui adipisci iure quis,
                             sequi quam voluptas dolorum quos, animi officiis sed.</p>
