--- a/views/home.html
+++ b/views/home.html
@@ -48,6 +48,7 @@
         <div id="sidebarMenu">
           <ul class="sidebarMenuInner">
             <li><a href="#" target="_blank">Mi Cuenta</a></li>
+            <li><a href="#" target="_blank">Guarderias</a></li>
             <li><a href="#" target="_blank">Nosotros</a></li>
             <li><a href="#" target="_blank">Contacto</a></li>
             <li><a href="#" target="_blank">FAQ</a></li>
