--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -153,11 +153,11 @@ header {
   text-decoration: none;
 }
 
-input[type="checkbox"]:checked ~ #sidebarMenu {
+.openSidebarMenu:checked ~ #sidebarMenu {
   transform: translateX(0);
 } 
 
-input[type=checkbox] {
+.openSidebarMenu {
   transition: all 0.3s;
   box-sizing: border-box;
   display: none;
@@ -204,18 +204,18 @@ input[type=checkbox] {
   float: left;
   margin-top: 3px;
 }
-input[type=checkbox]:checked ~ .sidebarIconToggle > .horizontal {
+.openSidebarMenu:checked ~ .sidebarIconToggle > .horizontal {
   transition: all 0.3s;
   box-sizing: border-box;
   opacity: 0;
 }
-input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-1 {
+.openSidebarMenu:checked ~ .sidebarIconToggle > .diagonal.part-1 {
   transition: all 0.3s;
   box-sizing: border-box;
   transform: rotate(135deg);
   margin-top: 8px;
 }
-input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
+.openSidebarMenu:checked ~ .sidebarIconToggle > .diagonal.part-2 {
   transition: all 0.3s;
   box-sizing: border-box;
   transform: rotate(-135deg);
