--- a/views/detalle-producto.html
+++ b/views/detalle-producto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Links CSS -->
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style-home.css">
     <link rel="stylesheet" href="/css/style-producto.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
     <!-- Links Fonts -->
@@ -20,19 +23,43 @@
     <header>
         <section class="topheader">
             <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
-            <img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg" alt="logo de la empresa">
+            <div class="vacio"></div>
+            <div class="logo"><a href="/"><img class="logo-alojamascotas" src="./img/logo-alojamascotas.svg"
+                        alt="logo de la empresa"></a></div>
             <div class="icon-search"><i class="fas fa-search" alt="logo busqueda"></i></div>
-            <a href="/carrito">
-                <div class="icon-cart"><i class="fas fa-shopping-cart" alt="logo carrito"></i></div>
+            <div class="icon-cart"><a href="/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
         </section>
         <section class="subheader">
             <a class="crear-cuenta" href="/registro">CREAR CUENTA</a>
+            <div class="line"></div>
             <a class="iniciar-sesion" href="/inicia-sesion">INICIAR SESION</a>
-
         </section>
+
+          <!-- Sidebar Nav -->
+
+        <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+        <label for="openSidebarMenu" class="sidebarIconToggle">
+          <div class="spinner diagonal part-1"></div>
+          <div class="spinner horizontal"></div>
+          <div class="spinner diagonal part-2"></div>
+        </label>
+        <div id="sidebarMenu">
+          <ul class="sidebarMenuInner">
+            <li><a href="#" target="_blank">Mi Cuenta</a></li>
+            <li><a href="#" target="_blank">Guarderias</a></li>
+            <li><a href="#" target="_blank">Nosotros</a></li>
+            <li><a href="#" target="_blank">Contacto</a></li>
+            <li><a href="#" target="_blank">FAQ</a></li>
+            <li><a href="#" target="_blank">Terminos y Condiciones</a></li>
+            <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+            <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+            <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+          </ul>
+        </div>
     </header>
+
     <main>
-        <article class="articulo1">
+        <article class="articulo1">git
             <div class="container">
                 <ul class="slider">
                     <li id="slide1">
