--- a/public/css/style-registro.css
+++ b/public/css/style-registro.css
@@ -6,84 +6,73 @@
 * {
     font-family: "Raleway", sans-serif;
   }
-  
+
   :root {
     --verde-oscuro: #3f4e4a;
     --verde-claro: #3f7552;
     --celeste-oscuro: #9fb7bc;
     --celeste-claro: #bccfd6;
   }
-  
-  header {
-    background-color: var(--celeste-claro);
-  }
-  
-  .topheader {
-    display: inline-block;
-    margin: 10px 0px;
-    width: 100vw;
-  }
-  
-  .logo-menu {
-    display: inline-block;
-    width: 25vw;
-    opacity: 80%;
-    text-align: left;
-  
-  }
-  
-  .logo-menu i {
-    color: var(--verde-oscuro);
-    font-size: 32px;
-  }
-  
-  .logo-alojamascotas {
-    display: inline-block;
-    width: 50vw;
-    max-width: 30%;
-    text-align: center;
-  }
 
-.icon-search {
-  display: inline-block;
-  width: 12vw;
-  padding: 10px;
+
+
+.boton-volver-home {
+  padding: 20px;
 }
 
-.icon-search i {
-  font-size: 26px;
-  color: var(--verde-oscuro);
-  opacity: 80%;
+.boton-volver-home a{
+  text-decoration: none;
+  color: grey;
 }
 
-.icon-cart {
-  display: inline-block;
-  padding: 10px;
-}
 
-.icon-cart i {
-  font-size: 26px;
-  color: var(--verde-oscuro);
-  opacity: 80%;
-}
-
-.subheader {
-  display: inline-block;
-  font-size: 14px;
-  padding: 2vw 10vw;
-  width: 100vw;
+.titulo-registro {
+  padding: 20px;
   text-align: center;
+  font-size: 23px;
+  color: rgb(117, 115, 115);
 }
 
-.subheader a.crear-cuenta {
-  padding-right: 5vw;
-  text-decoration: none;
-  color: var(--verde-oscuro);
-  opacity: 80%;
+.contenedor-registro {
+  margin: 30px;
+  text-align: center;
+  background-color: rgba(128, 128, 128, 0.24);
+  border-radius: 10px;
 }
-.subheader a.iniciar-sesion {
-  padding-left: 5vw;
-  text-decoration: none;
-  color: var(--verde-oscuro);
-  opacity: 80%;
+
+form div {
+  padding: 10px;
+}
+
+form label{
+  display: block;
+  text-align: center;
+  margin-bottom: 10px;
+  color: rgb(85, 83, 83);
+}
+
+form input {
+  border: none;
+  border-radius: 5px;
+  width: 200px;
+  height: 20px;
+}
+
+.div-confirmar-clave{
+  padding-top: 0px;
+  padding-bottom: 15px;
+}
+
+form button {
+  font-size: 15px;
+  background-color: grey;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  width: 200px;
+  height: 22px;
+}
+
+.div-button{
+  padding: 5px;
 }
